@@ -41,6 +41,8 @@ Release 0.9.0 - unreleased
 
   BUG FIXES
  
+    TAJO-827: SUM() overflow in the case of INT4. (Hyoungjun Kim via hyunsik)
+
     TAJO-832: NPE occurs when Exception's message is null in Task. 
     (Hyoungjun Kim via hyunsik)
 
